--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
         .nav-item:hover .nav-tooltip {
             opacity: 1;
         }
-
-        
     </style>
 </head>
 <body>
@@ -73,7 +71,6 @@
                 <h1 class="me-3 pe-3 mt-2" data-en="EmergencyCare" data-hi="आपातकालीन देखभाल" data-odia="ଇମରଜେନ୍ସି କେୟାର" data-kn="ತುರ್ತು ಆರೈಕೆ">EmergencyCare</h1>
                 <div class="language-selector" style="padding-left: 8px;">
                     <select id="language-select" onchange="changeLanguage()">
-                        <!-- <option value="en"><i class="bi bi-translate"></i></option> -->
                         <option value="en">English</option>
                         <option value="hi">हिन्दी</option>
                         <option value="odia">ଓଡ଼ିଆ</option>
@@ -84,12 +81,11 @@
             <div class="content">
                 <a href="#" class="button sos-button" onclick="navigateTo('onboarding-screen')" title="Activate SOS for emergencies" data-en="SOS" data-hi="एसओएस" data-odia="ଏସଓଏସ" data-kn="ಎಸ್‌ಒಎಸ್">SOS</a>
                 <div class="login-card">
-                    <h5 class="text-white">Login to Access More Features</h5>
-                    <input type="text" placeholder="Username" class="form-control mb-2">
-                    <input type="password" placeholder="Password" class="form-control mb-2">
-                    <button class="btn btn-primary w-100" type="submit">Login</button>
-                    <!-- <button class="btn btn-light w-100">Login</button> -->
-                    <p class="text-center mt-2 text-white" style="font-size: 12px;">New user? <a href="#">Sign up</a></p>
+                    <h5 class="text-white" data-en="Login to Access More Features" data-hi="अधिक सुविधाओं तक पहुँचने के लिए लॉगिन करें" data-odia="ଅଧିକ ସୁବିଧା ପାଇବା ପାଇଁ ଲଗଇନ କରନ୍ତୁ" data-kn="ಹೆಚ್ಚಿನ ಸೌಲಭ್ಯಗಳನ್ನು ಪಡೆಯಲು ಲಾಗಿನ್ ಮಾಡಿ">Login to Access More Features</h5>
+                    <input type="text" placeholder="Username" class="form-control mb-2" data-en-placeholder="Username" data-hi-placeholder="उपयोगकर्ता नाम" data-odia-placeholder="ଉପଯୋଗକର୍ତ୍ତା ନାମ" data-kn-placeholder="ಬಳಕೆದಾರ ಹೆಸರು">
+                    <input type="password" placeholder="Password" class="form-control mb-2" data-en-placeholder="Password" data-hi-placeholder="पासवर्ड" data-odia-placeholder="ପାସୱାର୍ଡ" data-kn-placeholder="ಪಾಸ್‌ವರ್ಡ್">
+                    <button class="btn btn-primary w-100" type="submit" data-en="Login" data-hi="लॉगिन" data-odia="ଲଗଇନ" data-kn="ಲಾಗಿನ್">Login</button>
+                    <p class="text-center mt-2 text-white" style="font-size: 12px;" data-en="New user? Sign up" data-hi="नया उपयोगकर्ता? साइन अप करें" data-odia="ନୂଆ ଉପଯୋଗକର୍ତ୍ତା? ସାଇନ ଅପ କରନ୍ତୁ" data-kn="ಹೊಸ ಬಳಕೆದಾರರೇ? ಸೈನ್ ಅಪ್ ಮಾಡಿ">New user? <a href="#">Sign up</a></p>
                 </div>
             </div>
             <div class="nav-bar d-flex">
@@ -113,7 +109,7 @@
                     <i class="bi bi-bell-fill"></i>
                     <span class="nav-tooltip">Disaster Mode</span>
                 </div>
-                </div>
+            </div>
         </div>
 
         <!-- Onboarding Screen -->
@@ -530,6 +526,87 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        function changeLanguage() {
+            const lang = document.querySelector('#language-select').value || 'en';
+            document.querySelectorAll('[data-en]').forEach(element => {
+                const text = element.getAttribute(`data-${lang}`);
+                if (text) {
+                    // Handle elements with text content
+                    if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+                        element.placeholder = text;
+                    } else if (element.tagName === 'SELECT') {
+                        // For select options, update the displayed text
+                        Array.from(element.options).forEach(option => {
+                            const optionText = option.getAttribute(`data-${lang}`);
+                            if (optionText) {
+                                option.text = optionText;
+                            }
+                        });
+                    } else {
+                        // For other elements like h1, p, a, etc.
+                        // Preserve child elements like <a> in the "New user? Sign up" text
+                        if (element.childNodes.length > 1) {
+                            const child = element.querySelector('a');
+                            if (child) {
+                                element.firstChild.textContent = text.split(' ')[0] + ' '; // Text before the link
+                                child.textContent = text.split(' ')[2]; // Link text
+                            }
+                        } else {
+                            element.textContent = text;
+                        }
+                    }
+                }
+            });
+            // Update the HTML lang attribute
+            document.documentElement.lang = lang;
+        }
+
+        // Call changeLanguage on page load to set the initial language
+        document.addEventListener('DOMContentLoaded', changeLanguage);
+
+        // Placeholder for other functions (assuming they exist in script.js)
+        function navigateTo(screenId) {
+            document.querySelectorAll('.screen').forEach(screen => {
+                screen.classList.remove('active');
+            });
+            document.getElementById(screenId).classList.add('active');
+        }
+
+        function updateBloodForm() {
+            const role = document.getElementById('blood-role').value;
+            document.getElementById('donor-form').style.display = role === 'donor' ? 'block' : 'none';
+            document.getElementById('receiver-form').style.display = role === 'receiver' ? 'block' : 'none';
+        }
+
+        function submitBloodForm(type) {
+            alert(`${type} form submitted`);
+        }
+
+        function selectHospital(name, distance, time) {
+            document.getElementById('eta-text').textContent = `ETA to ${name}: ${time}`;
+        }
+
+        function switchTab(tab) {
+            document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+            tab.classList.add('active');
+        }
+
+        function submitReport() {
+            alert('Report submitted');
+        }
+
+        function sendMessage() {
+            const input = document.getElementById('chat-input');
+            if (input.value.trim()) {
+                const messages = document.getElementById('chat-messages');
+                const message = document.createElement('div');
+                message.classList.add('message', 'right');
+                message.textContent = input.value;
+                messages.appendChild(message);
+                input.value = '';
+            }
+        }
+    </script>
 </body>
 </html>
